# shl-assessment-recommender

./: .env.example  .gitignore  Dockerfile  PLAN.md  PROJECT_STATUS.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py
app/api/: routes.py  schemas.py
app/catalog/: __init__.py  loader.py
app/core/: __init__.py  config.py
app/retriever/: __init__.py  bm25_retriever.py  embedder.py  fusion.py  pinecone_client.py
docs/: approach.md
scripts/: ingest_catalog.py
tests/: test_agent.py  test_api.py  test_retriever.py
